<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forecastFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForecastFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

        <LinearLayout
            android:layout_width="355dp"
            android:layout_height="600dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_day1"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:gravity="center"
                        android:text="@string/mon"
                        android:textSize="15sp"
                        tools:ignore="HardcodedText" />

                    <ImageView
                        android:id="@+id/iv_weather_icon1"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:src="@drawable/partly_cloudy" />

                    <TextView
                        android:id="@+id/textViewWeather1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/partly_cloudy_24c_31c"
                        android:textSize="15sp"
                        tools:ignore="HardcodedText" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_day2"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:gravity="center"
                        android:text="@string/tue"
                        android:textSize="15sp"
                        tools:ignore="HardcodedText" />

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:src="@drawable/rainy" />

                    <TextView
                        android:id="@+id/textViewWeather2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/showers_24c_30c"
                        android:textSize="15sp"
                        tools:ignore="HardcodedText" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_day3"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:gravity="center"
                        android:text="@string/wed"
                        android:textSize="15sp"
                        tools:ignore="HardcodedText" />

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:src="@drawable/rainy" />

                    <TextView
                        android:id="@+id/textViewWeather3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/rain_22c_23c"
                        android:textSize="15sp"
                        tools:ignore="HardcodedText" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_day4"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:gravity="center"
                        android:text="@string/thu"
                        android:textSize="15sp"
                        tools:ignore="HardcodedText" />

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:src="@drawable/scattered_showers" />

                    <TextView
                        android:id="@+id/textViewWeather4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/scattered_showers_22c_27c"
                        android:textSize="15sp"
                        tools:ignore="HardcodedText" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_day5"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:gravity="center"
                        android:text="@string/fri"
                        android:textSize="15sp"
                        tools:ignore="HardcodedText" />

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:src="@drawable/partly_cloudy" />

                    <TextView
                        android:id="@+id/textViewWeather5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/mostly_cloudy_22c_30c"
                        android:textSize="15sp"
                        tools:ignore="HardcodedText" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_day6"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:gravity="center"
                        android:text="@string/sat"
                        android:textSize="15sp"
                        tools:ignore="HardcodedText" />

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:src="@drawable/partly_cloudy" />

                    <TextView
                        android:id="@+id/textViewWeather6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/mostly_cloudy_22c_30c"
                        android:textSize="15sp"
                        tools:ignore="HardcodedText" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <TextView
                        android:id="@+id/tv_day7"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:gravity="center"
                        android:text="@string/sun"
                        android:textSize="15sp" />

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:src="@drawable/thunderstorm" />

                    <TextView
                        android:id="@+id/textViewWeather7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Thunderstorms 25C-28C"
                        android:textSize="15sp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_day9"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:gravity="center"
                        android:text="@string/mon"
                        android:textSize="15sp" />

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:src="@drawable/scattered_showers" />

                    <TextView
                        android:id="@+id/textViewWeather9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/scattered_thunderstorms_24c_27c"
                        android:textSize="15sp"
                        tools:ignore="HardcodedText" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_day10"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:gravity="center"
                        android:text="@string/tue"
                        android:textSize="15sp" />

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:src="@drawable/rainy" />

                    <TextView
                        android:id="@+id/textViewWeather10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/showers_24c_26c"
                        android:textSize="15sp"
                        tools:ignore="HardcodedText" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_day8"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:gravity="center"
                        android:text="@string/wed"
                        android:textSize="15sp"
                        tools:ignore="HardcodedText" />

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:src="@drawable/scattered_showers" />

                    <TextView
                        android:id="@+id/textViewWeather8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/scattered_thunderstorms_23c_27c"
                        android:textSize="15sp"
                        tools:ignore="HardcodedText" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
